Huge improvements for inherited versions.